servicemesh/_k8s/99_ingressgateway.yaml
# ##################################################################################################
# # Services
# ##################################################################################################
# ---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: services
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: public-http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "*"
    - port:
        number: 443
        name: public-https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls-credential-aimerzarashi.com
      hosts:
        - "*"
