servicemesh/_k8s/80_eventmesh-debeziumui.yaml
##################################################################################################
# eventmesh-debeziumui
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eventmesh-debeziumui
spec:
  hosts:
    - eventmesh-debeziumui.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: eventmesh-debeziumui.services.svc.cluster.local
            port:
              number: 8080
