servicemesh/_k8s/80_query-api.yaml
##################################################################################################
# query-api
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: query-api
spec:
  hosts:
    - query-api.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: query-api.services.svc.cluster.local
            port:
              number: 5000
