servicemesh/_k8s/82_command-api.yaml
##################################################################################################
# command-api
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: command-api
spec:
  hosts:
    - command-api.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: command-api.services.svc.cluster.local
            port:
              number: 3000
